--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,94 +1,108 @@
-.navbar {
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
     display: flex;
-    background-color: rgba(236, 162, 112, 0.39);
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: solid gray 1px;
+    align-items: center;
+    padding: 15px;  
 }
 
-.logo {
+.login{
     display: flex;
-    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    width: 300px;
+    margin-left: 100px;
+    font-family: 'Rubik', sans-serif;
 }
 
-.navbar-nav {
-    display: flex;
-    --bs-nav-link-padding-x: 1rem;
-    --bs-nav-link-padding-y: 0.5rem;
-    --bs-nav-link-color: rgb(236, 103, 14);
-    --bs-nav-link-hover-color: #000000;
-    --bs-nav-link-disabled-color: var(--bs-secondary-color);
-    
-}
-
-.text-end{
-    text-align: right;
-}
-
-.btn-primary {
-    --bs-btn-color: #f8f9fa;
-    --bs-btn-border-color: rgb(236, 103, 14);
-    --bs-btn-hover-color: #ffffff;
-    --bs-btn-hover-bg: rgb(236, 103, 14);
-    --bs-btn-hover-border-color: #f8f9fa;
-    --bs-btn-focus-shadow-rgb: 248,249,250;
-    --bs-btn-active-color:rgb(236, 103, 14);
-    --bs-btn-active-bg: #f8f9fa;
-    --bs-btn-active-border-color: rgb(236, 103, 14);
-    --bs-btn-active-shadow: inset 0 3px 5px rgb(236, 103, 14);
-    --bs-btn-disabled-color: #f8f9fa;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #020a13;
-    --bs-gradient: none;
-    margin: 0.5rem;
-}
-
-.btn-outline-warning {
-    --bs-btn-color: #f8f9fa;
-    --bs-btn-border-color: rgb(255, 102, 0);
-    --bs-btn-hover-color: #ffffff;
-    --bs-btn-hover-bg: rgb(255, 102, 0);
-    --bs-btn-hover-border-color: #f8f9fa;
-    --bs-btn-focus-shadow-rgb: 248,249,250;
-    --bs-btn-active-color:rgb(197, 94, 25);
-    --bs-btn-active-bg: #f8f9fa;
-    --bs-btn-active-border-color: rgb(236, 103, 14);
-    --bs-btn-active-shadow: inset 0 3px 5px rgb(197, 94, 25);
-    --bs-btn-disabled-color: #f8f9fa;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #020a13;
-    --bs-gradient: none;
-    margin: 0.5rem;
-}
-
-.btn {
-    --bs-btn-padding-x: 0.75rem;
-    --bs-btn-padding-y: 0.375rem;
-    --bs-btn-font-family: ;
-    --bs-btn-font-size: 1rem;
-    --bs-btn-font-weight: 400;
-    --bs-btn-line-height: 1.5;
-    --bs-btn-color: var(--bs-body-color);
-    --bs-btn-bg: transparent;
-    --bs-btn-border-width: var(--bs-border-width);
-    --bs-btn-border-radius: var(--bs-border-radius);
-    --bs-btn-hover-border-color: transparent;
-    --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 1px rgba(0, 0, 0, 0.075);
-    --bs-btn-disabled-opacity: 0.65;
-    --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-    display: inline-block;
-    padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-    font-family: var(--bs-btn-font-family);
-    font-size: var(--bs-btn-font-size);
-    font-weight: var(--bs-btn-font-weight);
-    line-height: var(--bs-btn-line-height);
-    color: var(--bs-btn-color);
-    text-align: center;
+.LoginText {
     text-decoration: none;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-    border-radius: var(--bs-btn-border-radius);
-    background-color: var(--bs-btn-bg);
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    color: #000;
+}
+
+.loginIcon{
+    font-size: 20px;
+    text-decoration: none;
+    color: #000;
+}
+
+#pesquisar{
+    width: 210px;
+    height: 20px;
+    border: none;
+    margin-left: 20px; 
+    font-family: 'Rubik', sans-serif;
+}
+
+.busca{
+    display: flex;
+    flex-direction: row;
+    border: solid 2px gray;
+    border-radius: 10px;
+    align-items: center;
+    margin-left: 90px;
+}
+
+.logo{
+    margin-left: 100px;
+    font-family: "Raleway";
+    text-align: center;
+}
+
+.logo .menuLink{
+    text-decoration: none;
+    color: #000;    
+}
+
+.loginLink{
+    list-style: none;
+    text-decoration: none;
+}
+
+.lupa{
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+.carrinho{
+    font-size: 25px;
+    margin-right: 100px;
+    margin-left: 20px;
+    text-decoration: none;
+    color: #000;
+}
+
+.menuContents{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+     gap: 80px;   
+}
+
+.menuBar .menuItens{
+    list-style: none;
+    font-size: 16px;
+    border-top:  2px;
+    padding: 20px;   
+}
+
+.menuItens:hover{
+    border-top: solid;
+    border-color: rgb(248, 142, 159) ;
+}
+
+.menuItens .menuLink{
+    font-size: 14px;
+    text-decoration: none;
+    color: #000;
 }
